--- a/style.css
+++ b/style.css
@@ -95,8 +95,7 @@
         }
         
         .ltwork {
-            width: 20%;
-            padding-left: 5%;
+            width: 25%;
             margin-left: 5%;
             margin-top: 80px;
             float: left;
@@ -111,7 +110,8 @@
         }
         
         .ltwork img {
-            width: 90%;
+            width: 100%;
+            height: auto;
         }
         
         .latestwork {
@@ -141,9 +141,9 @@
         
         .mydetails {
             text-align: center;
+            text-decoration: none;
+            height: 50px;
         }
-        
-        .insertarea {}
         
         footer {
             text-align: center;
